--- a/index.html
+++ b/index.html
@@ -30,7 +30,56 @@
 
 
 <body>
+    <navbar id="navbar">
 
+        <nav class="navbar navbar-expand-lg bg-light border border-secondary mb-5">
+            <div class="container-fluid ps-5">
+                <div class="socials">
+                    <a class="navbar-brand" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-square-instagram"></i>
+                    </a>
+                    <a class="navbar-brand" href="https://www.twitter.com" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a class="navbar-brand" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    <a class="navbar-brand" href="https://www.youtube.com" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                    <a class="navbar-brand" href="https://www.tiktok.com" target="_blank" rel="noopener noreferrer">
+                        <i class="fa-brands fa-tiktok"></i>
+                    </a>
+                    <a class="navbar-brand" href="#"> <i class="fa-solid fa-envelope"></i>
+                    </a>
+                    <a class="navbar-brand" href="#"><i class="fa-solid fa-phone"></i>
+                    </a>
+                </div>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav fw-bold">
+                        <li class="nav-item px-2">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item px-2">
+                            <a class="nav-link" href="#">Sobre mi</a>
+                        </li>
+                        <li class="nav-item px-2">
+                            <a class="nav-link" href="#">Habilidades</a>
+                        </li>
+                        <li class="nav-item px-2">
+                            <a class="nav-link" href="#">Proyectos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+    </navbar>
 
 
 
