--- a/index.html
+++ b/index.html
@@ -82,27 +82,33 @@
 
 
     <header id="header">
-        <div class="card border-0 bg-secondary rounded-0">
+
+        <div class="card border-0 rounded-0">
             <div class="row g-0">
                 <div class="col-md-6">
                     <img src="assets/img/header.jpg" class="img-fluid rounded-0"
                         alt="Imagen de Susi Márquez de pie sonriendo a la cámara">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 px-3">
                     <div class="card-body">
-                        <h1 class="card-title text-center fw-bold mt-5">Susi Márquez</h1>
+                        <h1 class="card-title text-center fw-bold text-dark mt-5">Susi Márquez</h1>
                         <hr>
-                        <p class="card-text py-4 lh-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        <p class="card-text fw-bolder py-2 lh-lg">Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit.
                             Nesciunt, numquam,
                             ipsam
                             veniam illum quaerat nihil,
                             sit rerum facilis quos id inventore! Neque consequatur sed ex doloremque. Voluptate earum
-                            sit alias!</p>
-                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa eligendi
-                            accusamus
-                            saepe amet delectus quo libero in voluptas, voluptatem quam corporis, dolor totam quaerat
-                            molestias
-                            voluptatum, voluptate velit. Incidunt, optio.</p>
+                            sit alias!
+                        </p>
+                        <p class="card-text fw-bolder py-2 lh-lg">Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit.
+                            Nesciunt, numquam,
+                            ipsam
+                            veniam illum quaerat nihil,
+                            sit rerum facilis quos id inventore! Neque consequatur sed ex doloremque. Voluptate earum
+                            sit alias!
+                        </p>
                     </div>
                 </div>
             </div>
@@ -111,8 +117,9 @@
     </header>
 
 
-    <section id="proyectos" class="bg-light py-2">
+    <section id="projects" class="bg-light py-2">
         <h2 class="text-center text-dark fw-bold pt-4">Mis proyectos</h2>
+
         <div class="row gy-5 gx-5 py-4 px-5">
             <div class="col-sm-12 col-md-6 col-lg-3 col-xl-4 mx-auto">
                 <div class="card">
@@ -135,7 +142,8 @@
                     <div class="card-body">
                         <h4 class="card-title fw-bold text-center text-dark">Cuppon</h4>
                         <hr>
-                        <p class="card-text text-center"> Proyecto donde se trabajó con Bootstrap para crear un landing page responsivo para la empresa Cuppon
+                        <p class="card-text text-center"> Proyecto donde se trabajó con Bootstrap para crear un landing
+                            page responsivo para la empresa Cuppon
 
                         </p>
                         <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
@@ -161,6 +169,40 @@
     </section>
 
 
+    <article id="services" class="py-5">
+        <h2 class="text-center text-dark fw-bold pb-5"> Servicios Disponibles</h2>
+
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4 mx auto text-center">
+                <i class="fa-solid fa-pen-to-square text-dark display-4 pb-3"></i>
+                <h4 class="fw-bold text-dark">Diseño UX/UI</h4>
+                <p> Estudio y analizo tu proyecto y potenciales clientes para diseñar el mejor layout para tu
+                    público objetivo
+                </p>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 mx auto text-center">
+                <i class="fa-regular fa-file-code text-dark display-4 pb-4"></i>
+                <h4 class="fw-bold text-dark">Desarrollo Páginas Web</h4>
+                <p> Levanto páginas web ya sea con tu propio diseño o podemos diseñarla juntos
+                </p>
+                <!-- mejorar texto -->
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 mx auto text-center">
+                <i class="fa-regular fa-comments text-dark display-4 pb-3"></i>
+                <h4 class="fw-bold text-dark">Community Manager</h4>
+                <p> Podemos manejar tus redes sociales para que tu proyecto crezca y disfrutes de más tiempo libre
+                </p>
+            </div>
+            <!-- <div class="col-sm-12 col-md-6 col-lg-4 mx auto text-center">
+                <i class="fa-solid fa-earth-americas text-dark display-4 pb-3"></i>
+                <h4 class="fw-bold text-dark">Diseño UX/UI</h4>
+                <p> Estudiamos y analizamos tu proyecto y potenciales clientes para poder diseñar el mejor layout para tu
+                    público objetivo
+                </p>
+            </div> -->
+        </div>
+
+    </article>
 
 
 
