--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <section id="projects" class="bg-light py-2">
         <h2 class="text-center text-dark fw-bold pt-4">Mis proyectos</h2>
 
-        <div class="row gy-5 gx-5 py-4 px-5">
+        <div class="row gy-5 gx-5 m-0 py-4 px-5">
             <div class="col-sm-12 col-md-6 col-lg-3 col-xl-4 mx-auto">
                 <div class="card">
                     <img src="assets/img/iguana-page.png" class="card-img-top rounded"
@@ -169,15 +169,14 @@
     </section>
 
 
-    <article id="services" class="py-5">
+    <article id="services" class="py-5 container">
         <h2 class="text-center text-dark fw-bold pb-5"> Servicios Disponibles</h2>
 
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4 mx auto text-center">
                 <i class="fa-solid fa-pen-to-square text-dark display-4 pb-3"></i>
                 <h4 class="fw-bold text-dark">Diseño UX/UI</h4>
-                <p> Estudio y analizo tu proyecto y potenciales clientes para diseñar el mejor layout para tu
-                    público objetivo
+                <p> Estudio tu proyecto y usuarios para diseñar el mejor producto para tu público objetivo
                 </p>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4 mx auto text-center">
@@ -185,24 +184,65 @@
                 <h4 class="fw-bold text-dark">Desarrollo Páginas Web</h4>
                 <p> Levanto páginas web ya sea con tu propio diseño o podemos diseñarla juntos
                 </p>
-                <!-- mejorar texto -->
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4 mx auto text-center">
                 <i class="fa-regular fa-comments text-dark display-4 pb-3"></i>
                 <h4 class="fw-bold text-dark">Community Manager</h4>
-                <p> Podemos manejar tus redes sociales para que tu proyecto crezca y disfrutes de más tiempo libre
+                <p> Manejo tus redes sociales para que tu proyecto crezca y disfrutes de más tiempo libre
                 </p>
             </div>
-            <!-- <div class="col-sm-12 col-md-6 col-lg-4 mx auto text-center">
-                <i class="fa-solid fa-earth-americas text-dark display-4 pb-3"></i>
-                <h4 class="fw-bold text-dark">Diseño UX/UI</h4>
-                <p> Estudiamos y analizamos tu proyecto y potenciales clientes para poder diseñar el mejor layout para tu
-                    público objetivo
-                </p>
-            </div> -->
         </div>
 
     </article>
+
+
+    <figure class="carousel bg-black">
+        <h2 class="text-center text-light fw-bold pt-5"> He trabajado para:</h2>
+
+        <div id="carouselExampleCaptions" class="carousel col-md-6 mx-auto" data-bs-ride="false">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="assets/img/natgeo.png" class="d-block w-100 img-responsive center-block" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>First slide label</h5>
+                  <p>Some representative placeholder content for the first slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="assets/img/revesderecho.png" class="d-block w-30" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Some representative placeholder content for the second slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Some representative placeholder content for the third slide.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
+    </figure>
+
+
+
+
 
 
 
