--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 
     <navbar id="navbar">
-        <nav class="navbar navbar-expand-lg bg-light border border-secondary">
+        <nav class="navbar fixed-top navbar-expand-lg bg-light border border-secondary">
             <div class="container-fluid ps-5">
                 <div class="socials">
                     <a class="navbar-brand" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
@@ -47,9 +47,6 @@
                     <a class="navbar-brand" href="https://www.youtube.com" target="_blank" rel="noopener noreferrer">
                         <i class="fa-brands fa-youtube"></i>
                     </a>
-                    <!-- <a class="navbar-brand" href="https://www.tiktok.com" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-brands fa-tiktok"></i>
-                    </a> -->
                     <a class="navbar-brand" href="#"> <i class="fa-solid fa-envelope"></i>
                     </a>
                     <a class="navbar-brand" href="#"><i class="fa-solid fa-phone"></i>
@@ -66,13 +63,16 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item px-2">
-                            <a class="nav-link" href="#">Sobre mi</a>
+                            <a class="nav-link" href="#projects">Proyectos</a>
                         </li>
                         <li class="nav-item px-2">
-                            <a class="nav-link" href="#">Habilidades</a>
+                            <a class="nav-link" href="#services">Servicios</a>
                         </li>
                         <li class="nav-item px-2">
-                            <a class="nav-link" href="#">Proyectos</a>
+                            <a class="nav-link" href="#carousel">Empresas</a>
+                        </li>
+                        <li class="nav-item px-2">
+                            <a class="nav-link" href="#contact">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -81,7 +81,7 @@
     </navbar>
 
 
-    <header id="header">
+    <header id="header" class="pt-5">
 
         <div class="card border-0 rounded-0">
             <div class="row g-0">
@@ -93,21 +93,11 @@
                     <div class="card-body">
                         <h1 class="card-title text-center fw-bold text-dark mt-5">Susi Márquez</h1>
                         <hr>
-                        <p class="card-text fw-bolder py-2 lh-lg">Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit.
-                            Nesciunt, numquam,
-                            ipsam
-                            veniam illum quaerat nihil,
-                            sit rerum facilis quos id inventore! Neque consequatur sed ex doloremque. Voluptate earum
-                            sit alias!
+                        <p class="card-text fw-bolder py-2 lh-lg"> Con más de 10 años de experiencia quiero ayudarte a lograr tus sueños, mejorando la llegada de tu marca con los clientes, aumentando las ventas y creciendo tu negocio con la ayuda de la tecnología.
                         </p>
-                        <p class="card-text fw-bolder py-2 lh-lg">Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit.
-                            Nesciunt, numquam,
-                            ipsam
-                            veniam illum quaerat nihil,
-                            sit rerum facilis quos id inventore! Neque consequatur sed ex doloremque. Voluptate earum
-                            sit alias!
+                        <p class="card-text fw-bolder py-2 lh-lg"> Realizo diversos servicios del área de diseño, programación y mantenimiento de páginas web, aplicaciones y sistemas internos de empresas.
+                        </p>
+                        <p class="card-text fw-bolder py-2 lh-lg"> Si lo que buscas es ayuda con alguna de estas áreas no dudes en contactarme!
                         </p>
                     </div>
                 </div>
@@ -117,8 +107,8 @@
     </header>
 
 
-    <section id="projects" class="bg-light py-2">
-        <h2 class="text-center text-dark fw-bold pt-4">Mis proyectos</h2>
+    <section id="projects" class="bg-dark py-5">
+        <h2 class="text-center text-light fw-bold pt-4">Algunos de mis Proyectos</h2>
 
         <div class="row gy-5 gx-5 m-0 py-4 px-5">
             <div class="col-sm-12 col-md-6 col-lg-3 col-xl-4 mx-auto">
@@ -129,7 +119,7 @@
                         <h4 class="card-title fw-bold text-center text-dark">Iguana Page</h4>
                         <hr>
                         <p class="card-text text-center"> Proyecto donde se utilizaron principalmente las propiedades
-                            display para describir a estos interesantes reptiles
+                            display para describir a estos peculiares reptiles
                         </p>
                         <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                     </div>
@@ -170,7 +160,7 @@
 
 
     <article id="services" class="py-5 container">
-        <h2 class="text-center text-dark fw-bold pb-5"> Servicios Disponibles</h2>
+        <h2 class="text-center text-dark fw-bold pb-5 py-5 "> Servicios Disponibles</h2>
 
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4 mx auto text-center">
@@ -196,10 +186,10 @@
     </article>
 
 
-    <figure class="carousel bg-black">
+    <figure id="carousel" class="carousel bg-dark py-5">
         <h2 class="text-center text-light fw-bold pt-5"> He trabajado para:</h2>
 
-        <div id="carouselExampleCaptions" class="carousel col-md-6 mx-auto" data-bs-ride="false">
+        <div id="carouselExampleCaptions" class="carousel col-md-6 mx-auto py-5" data-bs-ride="false">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -242,8 +232,33 @@
 
 
 
+    <section id="contact" class="container my-5">
+        <h2 class="text-center text-dark fw-bold pt-5 pb-4">Formulario de Contacto</h2> 
+
+        <form>
+            <div class="form-group mb-4">
+                <input class="form-control" placeholder="Nombre">
+            </div>
+
+            <div class="form-group mb-4">
+                <input class="form-control" placeholder="Correo electrónico" />
+            </div>
+
+            <div class="form-group">
+                <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
+            </div>
+
+            <div class="my-3 text-center d-grid gap-2 col-2 mx-auto">
+                <button class="btn btn-outline-dark fw-bold fs-6 mt-2 mb-5">Enviar</button>
+            </div>
+        </form>
+
+    </section>
 
 
+    <footer class="text-center text-light p-3 bg-dark">
+        <p class="mb-0"> Susi Marquez 2022. Todos los derechos reservados.</p>
+    </footer>
 
 
     <!-- Bootstrap JS -->
