--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-
-
-
-    <!-- Bootstrap CSS -->
+    <link rel="shortcut icon" href="assets/img/favicon-sm.png" type="image/x-icon">
+    <!-- Bootstrap CSS v5.2 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <!-- CSS -->
@@ -69,7 +67,7 @@
                             <a class="nav-link" href="#services">Servicios</a>
                         </li>
                         <li class="nav-item px-2">
-                            <a class="nav-link" href="#carousel">Empresas</a>
+                            <a class="nav-link" href="#carousel">Experiencia</a>
                         </li>
                         <li class="nav-item px-2">
                             <a class="nav-link" href="#contact">Contacto</a>
@@ -93,11 +91,15 @@
                     <div class="card-body">
                         <h1 class="card-title text-center fw-bold text-dark mt-5">Susi Márquez</h1>
                         <hr>
-                        <p class="card-text fw-bolder py-2 lh-lg"> Con más de 10 años de experiencia quiero ayudarte a lograr tus sueños, mejorando la llegada de tu marca con los clientes, aumentando las ventas y creciendo tu negocio con la ayuda de la tecnología.
+                        <p class="card-text fw-bolder py-2 lh-lg"> Con más de 10 años de experiencia quiero ayudarte a
+                            lograr tus sueños, mejorando la llegada de tu marca con los clientes, aumentando las ventas
+                            y creciendo tu negocio con la ayuda de la tecnología.
                         </p>
-                        <p class="card-text fw-bolder py-2 lh-lg"> Realizo diversos servicios del área de diseño, programación y mantenimiento de páginas web, aplicaciones y sistemas internos de empresas.
+                        <p class="card-text fw-bolder py-2 lh-lg"> Realizo diversos servicios del área de diseño,
+                            programación y mantenimiento de páginas web, aplicaciones y sistemas internos de empresas.
                         </p>
-                        <p class="card-text fw-bolder py-2 lh-lg"> Si lo que buscas es ayuda con alguna de estas áreas no dudes en contactarme!
+                        <p class="card-text fw-bolder py-2 lh-lg"> Si lo que buscas es ayuda con alguna de estas áreas
+                            no dudes en contactarme!
                         </p>
                     </div>
                 </div>
@@ -107,21 +109,22 @@
     </header>
 
 
-    <section id="projects" class="bg-dark py-5">
-        <h2 class="text-center text-light fw-bold pt-4">Algunos de mis Proyectos</h2>
+    <main id="projects" class="bg-dark py-5">
+        <h2 class="text-center text-light display-6 fw-bold pt-4">Algunos de mis Proyectos</h2>
 
         <div class="row gy-5 gx-5 m-0 py-4 px-5">
             <div class="col-sm-12 col-md-6 col-lg-3 col-xl-4 mx-auto">
                 <div class="card">
                     <img src="assets/img/iguana-page.png" class="card-img-top rounded"
                         alt="Imagen de parte del proyecto de landing page sobre Iguanas">
-                    <div class="card-body">
-                        <h4 class="card-title fw-bold text-center text-dark">Iguana Page</h4>
+                    <div class="card-body text-center">
+                        <h4 class="card-title fw-bold text-dark">Iguana Page</h4>
                         <hr>
-                        <p class="card-text text-center"> Proyecto donde se utilizaron principalmente las propiedades
+                        <p class="card-text"> Proyecto donde se utilizaron principalmente las propiedades
                             display para describir a estos peculiares reptiles
                         </p>
-                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                        <a href="https://github.com/SusiMarquez/IguanaPage" target="_blank" rel="noopener noreferrer"
+                            class="btn btn-dark">Ver más</a>
                     </div>
                 </div>
             </div>
@@ -129,14 +132,15 @@
                 <div class="card">
                     <img src="assets/img/cuppon-page.png" class="card-img-top rounded"
                         alt="Imagen de parte del proyecto de landing page para Cuppon">
-                    <div class="card-body">
-                        <h4 class="card-title fw-bold text-center text-dark">Cuppon</h4>
+                    <div class="card-body text-center">
+                        <h4 class="card-title fw-bold text-dark">Cuppon</h4>
                         <hr>
-                        <p class="card-text text-center"> Proyecto donde se trabajó con Bootstrap para crear un landing
+                        <p class="card-text"> Proyecto donde se trabajó con Bootstrap para crear un landing
                             page responsivo para la empresa Cuppon
 
                         </p>
-                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                        <a href="https://github.com/SusiMarquez/CupponPage" target="_blank" rel="noopener noreferrer"
+                            class="btn btn-dark">Ver más</a>
                     </div>
                 </div>
             </div>
@@ -144,23 +148,24 @@
                 <div class="card">
                     <img src="assets/img/aldonza-page.png" class="card-img-top rounded"
                         alt="Imagen de parte del proyecto de landing page para Cuppon">
-                    <div class="card-body">
-                        <h4 class="card-title fw-bold text-center text-dark">Aldonza Dubois</h4>
+                    <div class="card-body text-center">
+                        <h4 class="card-title fw-bold text-dark">Aldonza Dubois</h4>
                         <hr>
-                        <p class="card-text text-center"> Landing Page para la reconocida escritora y artista Aldonza
+                        <p class="card-text"> Landing Page para la reconocida escritora y artista Aldonza
                             Dubois que integra su tienda e intereses personales
                         </p>
-                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                        <a href="https://github.com/SusiMarquez/fdsw-github" target="_blank" rel="noopener noreferrer"
+                            class="btn btn-dark">Ver más</a>
                     </div>
                 </div>
             </div>
         </div>
 
-    </section>
+    </main>
 
 
     <article id="services" class="py-5 container">
-        <h2 class="text-center text-dark fw-bold pb-5 py-5 "> Servicios Disponibles</h2>
+        <h2 class="text-center text-dark display-6 fw-bold pb-5 py-5 "> Servicios Disponibles</h2>
 
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4 mx auto text-center">
@@ -187,53 +192,58 @@
 
 
     <figure id="carousel" class="carousel bg-dark py-5">
-        <h2 class="text-center text-light fw-bold pt-5"> He trabajado para:</h2>
+        <h2 class="text-center text-light display-6 fw-bold pt-5"> He trabajado para:</h2>
 
         <div id="carouselExampleCaptions" class="carousel col-md-6 mx-auto py-5" data-bs-ride="false">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="assets/img/natgeo.png" class="d-block w-100 img-responsive center-block" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                <div class="carousel-item active">
+                    <img src="assets/img/natgeo.png" class="d-block w-100 img-responsive center-block" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
                 </div>
-              </div>
-              <div class="carousel-item">
-                <img src="assets/img/revesderecho.png" class="d-block w-30" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                <div class="carousel-item">
+                    <img src="assets/img/revesderecho.png" class="d-block w-30" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Second slide label</h5>
+                        <p>Some representative placeholder content for the second slide.</p>
+                    </div>
                 </div>
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                <div class="carousel-item">
+                    <img src="..." class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
                 </div>
-              </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
             </button>
-          </div>
+        </div>
 
     </figure>
 
 
 
     <section id="contact" class="container my-5">
-        <h2 class="text-center text-dark fw-bold pt-5 pb-4">Formulario de Contacto</h2> 
+        <h2 class="text-center text-dark display-6 fw-bold pt-5 pb-4">Formulario de Contacto</h2>
 
         <form>
             <div class="form-group mb-4">
