Added 3 more projects with links + Added button to CV

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item px-2">
+                            <a class="nav-link" href="#carousel">CV</a>
+                        </li>
+                        <li class="nav-item px-2">
                             <a class="nav-link" href="#projects">Proyectos</a>
                         </li>
                         <li class="nav-item px-2">
@@ -69,7 +72,7 @@
                         <li class="nav-item px-2">
                             <a class="nav-link" href="#carousel">Experiencia</a>
                         </li>
-                        <li class="nav-item px-2">
+                       <li class="nav-item px-2">
                             <a class="nav-link" href="#contact">Contacto</a>
                         </li>
                     </ul>
@@ -89,18 +92,22 @@
                 </div>
                 <div class="col-md-6 px-3">
                     <div class="card-body">
-                        <h1 class="card-title text-center fw-bold text-dark mt-5">Susi Márquez</h1>
+                        <h1 class="card-title text-center fw-bold text-dark pt-4">Susi Márquez</h1>
                         <hr>
                         <p class="card-text fw-bolder py-2 lh-lg"> Con más de 10 años de experiencia quiero ayudarte a
                             lograr tus sueños, mejorando la llegada de tu marca con los clientes, aumentando las ventas
                             y creciendo tu negocio con la ayuda de la tecnología.
                         </p>
                         <p class="card-text fw-bolder py-2 lh-lg"> Realizo diversos servicios del área de diseño,
-                            programación y mantenimiento de páginas web, aplicaciones y sistemas internos de empresas.
+                            programación y mantenimiento de páginas web, desarrollo de aplicaciones y sistemas internos de empresas.
                         </p>
                         <p class="card-text fw-bolder py-2 lh-lg"> Si lo que buscas es ayuda con alguna de estas áreas
                             no dudes en contactarme!
                         </p>
+                        <a href="https://github.com/SusiMarquez/fdsw-github" target="_blank" rel="noopener noreferrer"
+                            class="btn btn-secondary text-light fw-bolder">Ver mi CV</a>
+
+
                     </div>
                 </div>
             </div>
@@ -155,6 +162,48 @@
                             Dubois que integra su tienda e intereses personales
                         </p>
                         <a href="https://github.com/SusiMarquez/fdsw-github" target="_blank" rel="noopener noreferrer"
+                            class="btn btn-dark">Ver más</a>
+                    </div>
+                </div>
+            </div>           
+            <div class="col-sm-12 col-md-6 col-lg-3 col-xl-4 mx-auto">
+                <div class="card">
+                    <img src="assets/img/tejeriles.png" class="card-img-top rounded"
+                        alt="Imagen de parte del proyecto de landing page para Cuppon">
+                    <div class="card-body text-center">
+                        <h4 class="card-title fw-bold text-dark">Tejeriles</h4>
+                        <hr>
+                        <p class="card-text"> Landing Page para la tienda Tejeriles, dedicada a las manualidades y el tejido
+                        </p>
+                        <a href="https://github.com/SusiMarquez/tejeriles" target="_blank" rel="noopener noreferrer"
+                            class="btn btn-dark">Ver más</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-3 col-xl-4 mx-auto">
+                <div class="card">
+                    <img src="assets/img/landing-plantas.png" class="card-img-top rounded"
+                        alt="Imagen de parte del proyecto de landing page para Cuppon">
+                    <div class="card-body text-center">
+                        <h4 class="card-title fw-bold text-dark">Plantas de Interior</h4>
+                        <hr>
+                        <p class="card-text"> Landing Page prototipo para una famosa tienda de plantas de interior
+                        </p>
+                        <a href="https://github.com/SusiMarquez/landing-plants" target="_blank" rel="noopener noreferrer"
+                            class="btn btn-dark">Ver más</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-3 col-xl-4 mx-auto">
+                <div class="card">
+                    <img src="assets/img/kuki-page.png" class="card-img-top rounded"
+                        alt="Imagen de parte del proyecto de landing page para Cuppon">
+                    <div class="card-body text-center">
+                        <h4 class="card-title fw-bold text-dark">CV perrita Kuki</h4>
+                        <hr>
+                        <p class="card-text"> Mi primera landing page: un currículum vitae perruno usando solo HTML
+                        </p>
+                        <a href="https://github.com/SusiMarquez/CV-kuki" target="_blank" rel="noopener noreferrer"
                             class="btn btn-dark">Ver más</a>
                     </div>
                 </div>
