Added more pictures to carousel + Added tooltips in navbar icons + CV colors and text decoration

--- a/cv.html
+++ b/cv.html
@@ -45,11 +45,16 @@
                             <div class="bg-light text-dark mt-5 p-2 border rounded lh-lg">
                                 <h5 class="text-center py-2 fw-bolder">Dominio</h5>
                                 <ul>
-                                    <li>HTML: Avanzado</li>
-                                    <li>CSS: Avanzado</li>
-                                    <li>Python: Intermedio</li>
-                                    <li>Ruby on Rails: Intermedio</li>
-                                    <li>Cloud: Intermedio</li>
+                                    <li>HTML: <span class="fw-lighter">Avanzado</span>
+                                    </li>
+                                    <li>CSS: <span class="fw-lighter">Avanzado</span>
+                                    </li>
+                                    <li>Javascript: <span class="fw-lighter">Avanzado</span>
+                                    </li>
+                                    <li>Python: <span class="fw-lighter">Intermedio</span>
+                                    </li>
+                                    <li>Ruby on Rails: <span class="fw-lighter">Intermedio</span>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -94,16 +99,16 @@
                                 de concretar clientes del extranjero
                             </p>
 
-                            <ul class="border rounded-pill p-4 text-center">
-                                <li>Español: Nativo</li>
-                                <li>Ingles: Avanzado</li>
-                                <li>Frances: Avanzado</li>
-                                <li>Koreano: Intermedio</li>
-                                <li>Italiano: Intermedio</li>
+                            <ul class="border rounded-pill p-4 text-center lh-lg">
+                                <li><u>Español</u>: Nativo</li>
+                                <li><u>Ingles</u>: Avanzado</li>
+                                <li><u>Frances</u>: Avanzado</li>
+                                <li><u>Koreano</u>: Intermedio</li>
+                                <li><u>Italiano</u>: Intermedio</li>
                             </ul>
 
-                            <a href="https://susimarquez.github.io" target="_blank"
-                                rel="noopener noreferrer" class="btn btn-dark m-4 p-3"> Ir a Portafolio</a>
+                            <a href="https://susimarquez.github.io" target="_blank" rel="noopener noreferrer"
+                                class="btn btn-dark m-4 p-3 fw-bolder rounded-4"> Ir a Portafolio</a>
                         </div>
                     </div>
                 </div>
