--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
         <nav class="navbar fixed-top navbar-expand-lg bg-light border border-secondary">
             <div class="container-fluid ps-5">
                 <div class="socials">
-                    <a class="navbar-brand" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                    <a class="navbar-brand" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Ir a Instagram">
                         <i class="fa-brands fa-square-instagram"></i>
                     </a>
-                    <a class="navbar-brand" href="https://www.twitter.com" target="_blank" rel="noopener noreferrer">
+                    <a class="navbar-brand" href="https://www.twitter.com" target="_blank" rel="noopener noreferrer" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Ir a Twitter">
                         <i class="fa-brands fa-twitter"></i>
                     </a>
-                    <a class="navbar-brand" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+                    <a class="navbar-brand" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Ir a Facebook">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
-                    <a class="navbar-brand" href="https://www.youtube.com" target="_blank" rel="noopener noreferrer">
+                    <a class="navbar-brand" href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Ir a Youtube">
                         <i class="fa-brands fa-youtube"></i>
                     </a>
-                    <a class="navbar-brand" href="#"> <i class="fa-solid fa-envelope"></i>
+                    <a class="navbar-brand" href="https://www.gmail.com" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Enviar un mail"> <i class="fa-solid fa-envelope"></i>
                     </a>
-                    <a class="navbar-brand" href="#"><i class="fa-solid fa-phone"></i>
+                    <a class="navbar-brand" href="#" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Enviar un mensaje por Whatsapp"><i class="fa-brands fa-square-whatsapp"></i>
                     </a>
                 </div>
 
@@ -61,7 +61,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item px-2">
-                            <a class="nav-link" href="#carousel">CV</a>
+                            <a class="nav-link" href="cv.html" target="_blank" rel="noopener noreferrer">CV</a>
                         </li>
                         <li class="nav-item px-2">
                             <a class="nav-link" href="#projects">Proyectos</a>
@@ -72,7 +72,7 @@
                         <li class="nav-item px-2">
                             <a class="nav-link" href="#carousel">Experiencia</a>
                         </li>
-                       <li class="nav-item px-2">
+                        <li class="nav-item px-2">
                             <a class="nav-link" href="#contact">Contacto</a>
                         </li>
                     </ul>
@@ -80,7 +80,6 @@
             </div>
         </nav>
     </navbar>
-
 
     <header id="header" class="pt-5">
 
@@ -99,15 +98,14 @@
                             y creciendo tu negocio con la ayuda de la tecnología.
                         </p>
                         <p class="card-text fw-bolder py-2 lh-lg"> Realizo diversos servicios del área de diseño,
-                            programación y mantenimiento de páginas web, desarrollo de aplicaciones y sistemas internos de empresas.
+                            programación y mantenimiento de páginas web, desarrollo de aplicaciones y sistemas internos
+                            de empresas.
                         </p>
-                        <p class="card-text fw-bolder py-2 lh-lg"> Si lo que buscas es ayuda con alguna de estas áreas
+                        <p class="card-text fw-bolder py-2 lh-lg"> Si buscas ayuda con alguna de estas áreas
                             no dudes en contactarme!
                         </p>
-                        <a href="https://github.com/SusiMarquez/fdsw-github" target="_blank" rel="noopener noreferrer"
+                        <a href="cv.html" target="_blank" rel="noopener noreferrer"
                             class="btn btn-secondary text-light fw-bolder">Ver mi CV</a>
-
-
                     </div>
                 </div>
             </div>
@@ -116,7 +114,7 @@
     </header>
 
 
-    <main id="projects" class="bg-dark py-5">
+    <main id="projects" class="bg-secondary py-5">
         <h2 class="text-center text-light display-6 fw-bold pt-4">Algunos de mis Proyectos</h2>
 
         <div class="row gy-5 gx-5 m-0 py-4 px-5">
@@ -165,7 +163,7 @@
                             class="btn btn-dark">Ver más</a>
                     </div>
                 </div>
-            </div>           
+            </div>
             <div class="col-sm-12 col-md-6 col-lg-3 col-xl-4 mx-auto">
                 <div class="card">
                     <img src="assets/img/tejeriles.png" class="card-img-top rounded"
@@ -173,7 +171,8 @@
                     <div class="card-body text-center">
                         <h4 class="card-title fw-bold text-dark">Tejeriles</h4>
                         <hr>
-                        <p class="card-text"> Landing Page para la tienda Tejeriles, dedicada a las manualidades y el tejido
+                        <p class="card-text"> Landing Page para la tienda Tejeriles, dedicada a las manualidades y el
+                            tejido
                         </p>
                         <a href="https://github.com/SusiMarquez/tejeriles" target="_blank" rel="noopener noreferrer"
                             class="btn btn-dark">Ver más</a>
@@ -189,8 +188,8 @@
                         <hr>
                         <p class="card-text"> Landing Page prototipo para una famosa tienda de plantas de interior
                         </p>
-                        <a href="https://github.com/SusiMarquez/landing-plants" target="_blank" rel="noopener noreferrer"
-                            class="btn btn-dark">Ver más</a>
+                        <a href="https://github.com/SusiMarquez/landing-plants" target="_blank"
+                            rel="noopener noreferrer" class="btn btn-dark">Ver más</a>
                     </div>
                 </div>
             </div>
@@ -229,7 +228,7 @@
                 <p> Levanto páginas web ya sea con tu propio diseño o podemos diseñarla juntos
                 </p>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4 mx auto text-center">
+            <div class="col-sm-12 col-md-6 col-lg-4 mx auto text-center pb-5">
                 <i class="fa-regular fa-comments text-dark display-4 pb-3"></i>
                 <h4 class="fw-bold text-dark">Community Manager</h4>
                 <p> Manejo tus redes sociales para que tu proyecto crezca y disfrutes de más tiempo libre
@@ -241,46 +240,55 @@
 
 
     <figure id="carousel" class="carousel bg-dark py-5">
-        <h2 class="text-center text-light display-6 fw-bold pt-5"> He trabajado para:</h2>
+        <h2 class="text-center text-light display-6 fw-bold pt-5"> He trabajado para empresas como:</h2>
 
-        <div id="carouselExampleCaptions" class="carousel col-md-6 mx-auto py-5" data-bs-ride="false">
+        <div id="carouselExampleIndicators" class="carousel slide col-md-6 mx-auto py-5" data-bs-ride="true">
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
                     aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                    aria-label="Slide 5"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+                    aria-label="Slide 6"></button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/img/natgeo.png" class="d-block w-100 img-responsive center-block" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
-                    </div>
+                    <img src="assets/img/bmw.jpg" class="d-block w-100 rounded-5"
+                        alt="Imagen del logo de la empresa BMW">
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/revesderecho.png" class="d-block w-30" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
-                    </div>
+                    <img src="assets/img/google.png" class="d-block w-100 rounded-5"
+                        alt="Imagen de la página principal de Google">
                 </div>
                 <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
-                    </div>
+                    <img src="assets/img/natgeo.png" class="d-block w-100 rounded-5"
+                        alt="Imagen del logo de National Geographic">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/entel.png" class="d-block w-100 rounded-5"
+                        alt="Imagen de unas tarjetas de crédito de Entel Visa">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/revesderecho.png" class="d-block w-100 rounded-5"
+                        alt="Imagen del logo de la tienda Revesderecho">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/marshall.jpg" class="d-block w-100 rounded-5"
+                        alt="Imagen de un parlante maraca Marshall">
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
                 data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
                 data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
@@ -288,7 +296,6 @@
         </div>
 
     </figure>
-
 
 
     <section id="contact" class="container my-5">
@@ -316,7 +323,7 @@
 
 
     <footer class="text-center text-light p-3 bg-dark">
-        <p class="mb-0"> Susi Marquez 2022. Todos los derechos reservados.</p>
+        <p class="mb-0"> © Susi Marquez 2022. Todos los derechos reservados.</p>
     </footer>
 
 
@@ -327,6 +334,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
         crossorigin="anonymous"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
