Added tooltips in CV footer icons + fixed mail and whatsapp links in navbar

--- a/index.html
+++ b/index.html
@@ -33,21 +33,29 @@
         <nav class="navbar fixed-top navbar-expand-lg bg-light border border-secondary">
             <div class="container-fluid ps-5">
                 <div class="socials">
-                    <a class="navbar-brand" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Ir a Instagram">
+                    <a class="navbar-brand" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Ir a Instagram">
                         <i class="fa-brands fa-square-instagram"></i>
                     </a>
-                    <a class="navbar-brand" href="https://www.twitter.com" target="_blank" rel="noopener noreferrer" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Ir a Twitter">
+                    <a class="navbar-brand" href="https://www.twitter.com" target="_blank" rel="noopener noreferrer"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Ir a Twitter">
                         <i class="fa-brands fa-twitter"></i>
                     </a>
-                    <a class="navbar-brand" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Ir a Facebook">
+                    <a class="navbar-brand" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Ir a Facebook">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
-                    <a class="navbar-brand" href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Ir a Youtube">
+                    <a class="navbar-brand" href="https://www.youtube.com" target="_blank" rel="noopener noreferrer"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Ir a Youtube">
                         <i class="fa-brands fa-youtube"></i>
                     </a>
-                    <a class="navbar-brand" href="https://www.gmail.com" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Enviar un mail"> <i class="fa-solid fa-envelope"></i>
+                    <a class="navbar-brand" href="https://www.gmail.com" target="_blank" rel="noopener noreferrer"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Enviar un mail"> <i
+                            class="fa-solid fa-envelope"></i>
                     </a>
-                    <a class="navbar-brand" href="#" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Enviar un mensaje por Whatsapp"><i class="fa-brands fa-square-whatsapp"></i>
+                    <a class="navbar-brand" href="https://www.whatsapp.com/" target="_blank" rel="noopener noreferrer"
+                        data-bs-toggle="tooltip" data-bs-placement="bottom"
+                        data-bs-title="Enviar un mensaje por Whatsapp"><i class="fa-brands fa-square-whatsapp"></i>
                     </a>
                 </div>
 
@@ -81,8 +89,8 @@
         </nav>
     </navbar>
 
+    
     <header id="header" class="pt-5">
-
         <div class="card border-0 rounded-0">
             <div class="row g-0">
                 <div class="col-md-6">
