--- a/cv.html
+++ b/cv.html
@@ -28,7 +28,7 @@
 
 <body>
 
-    <header class="header text-center">
+    <main class="main text-center">
         <div class="row">
             <div class="col-4 mx-auto ">
                 <div class="card border-0 rounded-0">
@@ -62,15 +62,14 @@
                 </div>
             </div>
             <div class="col-6 mx-auto pt-5 px-2">
-                <!-- <div class="col-sm-12 col-md-6 col-lg-3 col-xl-4"> -->
                 <div class="card border-0 rounded-0">
                     <div class=" bg-light border rounded p-4">
                         <h3 class="pt-1 fs-1"> Carrera </h3>
                         <p class="text-start"> Motivada por 10 años de experiencia en el desarrollo web. Reconocida por
                             liderar
-                            proyectos en toda su producción, desde el área de UX/UI hasta el deploy completo de los
-                            productos. Cooperadora, muy organizada y con grandes habilidades para trabajar dentro de
-                            y liderar equipos multidisciplinarios.
+                            proyectos en toda su producción, desde el área de UX/UI hasta el deploy final de los
+                            productos. Cooperadora, muy organizada y con grandes habilidades para ser parte de equipos
+                            multidisciplinarios.
                         </p>
                         <div class=" fw-bolder text-start p-3">
                             <p> <i class="fa-regular fa-user"></i> Desarrollador Front End <i
@@ -83,11 +82,11 @@
                             </p>
                             <p> <i class="fa-regular fa-user"></i> Desarrollador Front End <i
                                     class="fa-solid fa-location-pin ms-2"></i> Entel, Chile <i
-                                    class="fa-regular fa-calendar-days ms-2 me-1"></i>2013-2016
+                                    class="fa-regular fa-calendar-days ms-2 me-1"></i>2014-2016
                             </p>
                             <p> <i class="fa-regular fa-user"></i> Desarrollador Front End <i
                                     class="fa-solid fa-location-pin ms-2"></i> Desafío Latam, Chile <i
-                                    class="fa-regular fa-calendar-days ms-2 me-1"></i>2010-2013
+                                    class="fa-regular fa-calendar-days ms-2 me-1"></i>2012-2014
                             </p>
                         </div>
 
@@ -95,8 +94,7 @@
                     <div class="card-body text-center">
                         <div class="card-text mt-4">
                             <p class="fw-bolder">Gran dominio de los idiomas lo que le permite ser una herramienta
-                                indispensable a la hora
-                                de concretar clientes del extranjero
+                                indispensable a la hora conectar con clientes del extranjero
                             </p>
 
                             <ul class="border rounded-pill p-4 text-center lh-lg">
@@ -106,7 +104,7 @@
                                 <li><u>Koreano</u>: Intermedio</li>
                                 <li><u>Italiano</u>: Intermedio</li>
                             </ul>
-
+                            
                             <a href="https://susimarquez.github.io" target="_blank" rel="noopener noreferrer"
                                 class="btn btn-dark m-4 p-3 fw-bolder rounded-4"> Ir a Portafolio</a>
                         </div>
@@ -114,39 +112,44 @@
                 </div>
             </div>
 
-    </header>
-
-
+        </main>
 
 
     <footer>
-        <div class=" footer container-fluid ps-5 bg-secondary p-4 text-light fs-3 text-center">
+        <div class=" footer container-fluid ps-5 bg-secondary p-4 text-light h2 text-center">
             <div class="socials">
-                <a class="navbar-brand px-3" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
-                    <i class="fa-brands fa-square-instagram"></i>
+                <a class="navbar-brand px-3" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Ir a Instagram">
+                <i class="fa-brands fa-square-instagram"></i>
                 </a>
-                <a class="navbar-brand px-3" href="https://www.twitter.com" target="_blank" rel="noopener noreferrer">
+                <a class="navbar-brand px-3" href="https://www.twitter.com" target="_blank" rel="noopener noreferrer"
+                    data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Ir a Twitter">
                     <i class="fa-brands fa-twitter"></i>
                 </a>
-                <a class="navbar-brand px-3" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+                <a class="navbar-brand px-3" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer"
+                    data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Ir a Facebook">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
-                <a class="navbar-brand px-3" href="https://www.youtube.com" target="_blank" rel="noopener noreferrer">
+                <a class="navbar-brand px-3" href="https://www.youtube.com" target="_blank" rel="noopener noreferrer"
+                    data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Ir a Youtube">
                     <i class="fa-brands fa-youtube"></i>
                 </a>
                 <a class="navbar-brand px-3" href="https://github.com/SusiMarquez" target="_blank"
-                    rel="noopener noreferrer">
+                    rel="noopener noreferrer" data-bs-toggle="tooltip" data-bs-placement="top"
+                    data-bs-title="Ir a Github">
                     <i class="fa-brands fa-github"></i>
                 </a>
             </div>
-
-
     </footer>
 
 
-
-
-
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+        crossorigin="anonymous"></script>
+    <script src="assets/js/script.js"></script>
 
 </body>
 
